# TotalSearch

./: .gitignore  CMakeLists.txt  LICENSE  README.md  app.ini  build.bat  build.sh  create_download_package.ps1  fix_github_pages.md  script.js  tatus --porcelain
.github/workflows/: deploy.yml
doc/: KSearchBun.txt  RG help.txt  RG help_Amir.txt  SESSION_NOTES_2025-08-12.md
doc/fn/: OPEN kOpenFileTransfetToContentFast.md  OPEN kOpenFileTransfetToContentFast.txt
explain/: CRASH_ANALYSIS.md  DETACHABLE_PANES_README.md  ICON_DESIGN_PROMPT.md  ICON_DOCUMENTATION.md  LAYOUT_CRASH_DEBUG.md  LAYOUT_SWITCHING_ISSUE.md  LICENSING.md  README.md  SIMPLIFIED_ARBITER_EXPLANATION.md  TODO.md  all_functions_diagram.html  fastOpenDisplay.md  flow_diagram.html  flow_diagram.txt  flow_diagram_visual.txt  function_documentation.html  howtoinstallKlogg.md  search_history.txt  stopSearch.md
icons/: icons.qrc
include/: mainwindow.h
scintilla/scintilla/: .hg_archival.txt
scintilla/scintilla/qt/ScintillaEditBase/: CMakeLists.txt  PlatQt.cpp  PlatQt.h  ScintillaQt.cpp
scintilla/scintilla/src/: CMakeLists.txt  Platform.h
scripts/: Start_TotalSearch.bat  Start_TotalSearch.sh
src/: CollapsibleSearchResults.cpp  CollapsibleSearchResults.h  DetachablePane.cpp  DetachablePane.h  JsonParseWorker.cpp  JsonParseWorker.h  KSearch.cpp  KSearch.h  KSearchBun.cpp  KSearchBun.h  LogDataWorker.cpp  LogDataWorker.h  LogMainView.cpp  LogMainView.h  ULTRA_FAST_CONFIG.h  clocktestdialog.cpp  clocktestdialog.h  configurationdialog.cpp  configurationdialog.h  engineeringdialog.cpp  engineeringdialog.h  fileholder.cpp  filelinemodel.cpp  filelinemodel.h  filesearcher.cpp  filesearcher.h  fileviewer.cpp  fileviewer.h  fileviewer.ui  filewatcher.cpp  filewatcher.h  highlightdialog.cpp  highlightdialog.h  highlighter.cpp  highlighter.h  linepositionarray.cpp  logger.cpp  logger.h  logviewer.cpp  logviewer.h  (+22 more)
src/renderer/: index.html  renderer.js  styles.css
temp/TotalSearch/: App.ini  status.json
temp/TotalSearch/docs/: LICENSING.md  README.md
watchdog/: CMakeLists.txt  TotalSearchWatchdog.cpp  TotalSearchWatchdog.h  main.cpp
website/: index.html  script.js  styles.css
